--- a/style.css
+++ b/style.css
@@ -113,42 +113,42 @@ ul {
     display: flex;
     flex-direction: column;
     width: 800px;
+    align-items: center;
+
     /*background: white;*/
-    max-width: 80%;
+    /*max-width: 80%;*/
 
 }
 
 .range input {margin-top:10%;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(180deg);}
 
 .block {
+    padding: 15px;
     font-size: 25px;
     margin-top: 10px;
-    height: 70px;
+    min-height: 70px;
     background: white;
     border-radius: 3px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*align-items: center;*/
+    /*justify-content: space-between;*/
     padding-right: 40px;
+    min-width: 70%;
     /*padding-left: 20px;*/
 }
-
 
 .block-title-t {
     color: black;
     margin-left: 10px;
-
     text-transform: uppercase;
 }
 
-.block-title-p {
-    font-size: 15px;
-    margin-bottom: 30px;
+.state-wet {
+    color: crimson;
+}
+.state-dry {
+    color: lightgreen;
 }
 
-.block-mode {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
