--- a/static/style.css
+++ b/static/style.css
@@ -112,7 +112,7 @@ ul {
     /*margin: auto;*/
     display: flex;
     flex-direction: column;
-    width: 800px;
+    max-width: 800px;
     align-items: center;
 
     /*background: white;*/
@@ -141,12 +141,14 @@ hr {
     min-height: 70px;
     background: white;
     border-radius: 3px;
+    min-width: 320px;
+    width: 30svw;
     /*display: flex;*/
     /*flex-direction: row;*/
     /*align-items: center;*/
     /*justify-content: space-between;*/
 
-    min-width: 70%;
+
     /*padding-left: 20px;*/
 }
 .block-mode {
